# simple

./: .sl2R.cpp.swo  .sl2R.cpp.swp  .sl_device.cu.swp  CMakeCache.txt  CMakeLists.txt  INSTALLATION  Makefile  Rinterface.cu  X.h5  cmake_install.cmake  inp.h5  install_manifest.txt  main.cu  simple  sl.h  sl2R.cpp  sl_code.cpp  sl_device.cu  sl_device.cuh  sl_host.cpp  sl_misc.cpp  sl_pars.cpp  sl_prot.h  sl_run.cu  sl_run.cuh  sl_tbl.cpp  sl_tkn.cpp  sort.txt
Rinterface/: Rinterface.R  inp.h5  multi.txt  r_multi.R  rs_multi.R  rs_sort.R  rs_sort.Rout  sort.txt
examples/: a.h5  add.txt
examples/r_origin_sorting/: R_sorting.R
examples/r_simple_sorting/: sorting.R
test_/: A.h5  B.h5  B.txt  B2.txt  cmd.txt  test.txt
